-create new section-hero

--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
             </div>
         </div>
     </header>
+    <section name="hero" class="hero">
+        <div class="container">
+            <div class="hero-wrapper">
+                <h1 class="hero-wrapper__title">Съёмка<br> и монтаж видео</h1>
+                <a href="#portfolio" class="hero-wrapper__button button">Портфолио</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
