-create "section prices + connect js files"

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </section>
     <section class="portfolio">
         <div class="container">
-            <div class="portfolio-header">
+            <div class="portfolio-header" id="portfolio">
                 <span class="subtitle portfolio-header__subtitle">Мои работы</span>
                 <h2 class="title portfolio-header__title">Портфолио</h2>
             </div>
-            <div class="portfolio-wrapper" id="portfolio">
+            <div class="portfolio-wrapper">
                 <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
@@ -50,12 +50,53 @@
         </div>
     </section>
     <section class="prices">
-        <div class="content">
+        <div class="container">
             <div class="prices-header">
                 <span class="subtitle prices-header__subtitle">Достижения</span>
                 <h2 class="prices-header__title title">Мои услуги</h2>
             </div>
+            <div class="prices-slider">
+                <div class="slide">
+                    <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
+                    <div class="slide-text">
+                        <h4 class="slide-text__title">Музыкальный видео клип</h4>
+                        <hr class="slide-text__line">
+                        <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
+                        <button class="button slide-text__button">Подробнее</button>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide__img"><img src="img/slide-item-2.jpg" alt=""></div>
+                    <div class="slide-text">
+                        <h4 class="slide-text__title">Love-story</h4>
+                        <hr class="slide-text__line">
+                        <p class="slide-text__subtitle">Это Ваша история любви.</p>
+                        <button class="button slide-text__button">Подробнее</button>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide__img"><img src="img/slide-item-3.jpg" alt=""></div>
+                    <div class="slide-text">
+                        <h4 class="slide-text__title">Рекламный ролик</h4>
+                        <hr class="slide-text__line">
+                        <p class="slide-text__subtitle">Это короткое видео, призванное наилучшим образом презентовать определенный продукт или услугу и повысить продажи.</p>
+                        <button class="button slide-text__button">Подробнее</button>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
+                    <div class="slide-text">
+                        <h4 class="slide-text__title">Музыкальный видео клип</h4>
+                        <hr class="slide-text__line">
+                        <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
+                        <button class="button slide-text__button">Подробнее</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
