--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <div class="header-content">
                 <h1 class="header__logo">Sergey/Andrianov.</h1>
                 <ul class="header-nav">
-                    <li class="header-nav__item"><a href="#" class="header-nav__link">Обо мне</a></li>
+                    <li class="header-nav__item"><a href="#about" class="header-nav__link">Обо мне</a></li>
                     <li class="header-nav__item"><a href="#portfolio" class="header-nav__link">Портфолио</a></li>
-                    <li class="header-nav__item"><a href="#" class="header-nav__link">Цены</a></li>
+                    <li class="header-nav__item"><a href="#prices" class="header-nav__link">Цены</a></li>
                     <li class="header-nav__item"><a href="#" class="header-nav__link">Контакты</a></li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </div>
     </section>
-    <section class="prices">
+    <section class="prices" id="prices">
         <div class="container">
             <div class="prices-header">
                 <span class="subtitle prices-header__subtitle">Достижения</span>
@@ -91,6 +91,24 @@
                         <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
                         <button class="button slide-text__button">Подробнее</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about" id="about">
+        <div class="container">
+            <div class="about-wrapper">
+                <div class="about-header">
+                    <span class="about-header__subtitle subtitle">Почему именно я?</span>
+                    <h2 class="about-header__title title">Немного о себе</h2>
+                </div>
+                <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod est sed diam commodo sagittis. Integer libero orci, luctus in vehicula ac, blandit id velit. Nunc ultricies suscipit orci, id dictum quam sagittis ut. Sed sit amet lorem at libero venenatis iaculis. Etiam malesuada nisl aliquet diam posuere venenatis. Vivamus ac nisi tristique, aliquam leo at, aliquam elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean lobortis viverra enim nec lobortis. Cras facilisis, sapien vitae vestibulum efficitur, eros neque euismod nisl, sit amet suscipit nisi tortor sed nisl.</p>
+                <div class="about-form">
+                    <p class="about-form__text">Я собрал свои работы на этом сайте. Хотите посмотреть?</p>
+                    <a href="#portfolio" class="about-form__link">Портфолио</a>
+                </div>
+                <div class="about-image">
+                    <img src="img/about.jpg" alt="" class="about-image__img">
                 </div>
             </div>
         </div>
