-create "AutoResizeTextarea + about"

--- a/index.html
+++ b/index.html
@@ -113,6 +113,29 @@
             </div>
         </div>
     </section>
+    <section class="contacts">
+        <div class="container">
+            <form action="" class="contacts-form">
+                <div class="contacts-header">
+                    <span class="contacts-header__subtitle subtitle">Контакты</span>
+                    <contacts-header__title class="title">Хотите так же?</contacts-header__title>
+                </div>
+                <div class="input-block">
+                    <input placeholder=" " id="input-name" type="name" class="contacts-form__input">
+                    <label class="label" for="input-name">Имя</label>
+                </div>
+                <div class="input-block">
+                    <input placeholder=" " id="input-email"type="email" class="contacts-form__input">
+                    <label class="label" for="input-email">Почта</label>
+                </div>
+                <div id="textarea" class="textarea-block textarea">
+                    <textarea placeholder=" " id="input-text" name="text" class="contacts-form__textarea"></textarea>
+                    <label class="label" for="input-text">Сообщение</label>
+                </div>
+                <button class="contacts-form__button button">Отправить</button>
+            </form>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
