-fix "slider + add anim on button in contacts"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 <span class="subtitle prices-header__subtitle">Достижения</span>
                 <h2 class="prices-header__title title">Мои услуги</h2>
             </div>
-            <div class="prices-slider">
+            <div class="prices-slider" style="min-width: 0">
+
                 <div class="slide">
                     <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
                     <div class="slide-text">
@@ -65,6 +66,7 @@
                         <button class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
+
                 <div class="slide">
                     <div class="slide__img"><img src="img/slide-item-2.jpg" alt=""></div>
                     <div class="slide-text">
@@ -74,6 +76,7 @@
                         <button class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
+
                 <div class="slide">
                     <div class="slide__img"><img src="img/slide-item-3.jpg" alt=""></div>
                     <div class="slide-text">
@@ -83,6 +86,7 @@
                         <button class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
+
                 <div class="slide">
                     <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
                     <div class="slide-text">
@@ -92,6 +96,17 @@
                         <button class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
+
+                <div class="slide" style="min-width: 0">
+                    <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
+                    <div class="slide-text">
+                        <h4 class="slide-text__title">Музыкальный видео клип</h4>
+                        <hr class="slide-text__line">
+                        <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
+                        <button class="button slide-text__button">Подробнее</button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
