--- a/index.html
+++ b/index.html
@@ -130,27 +130,51 @@
     </section>
     <section class="contacts">
         <div class="container">
-            <form action="" class="contacts-form">
-                <div class="contacts-header">
-                    <span class="contacts-header__subtitle subtitle">Контакты</span>
-                    <contacts-header__title class="title">Хотите так же?</contacts-header__title>
-                </div>
-                <div class="input-block">
-                    <input placeholder=" " id="input-name" type="name" class="contacts-form__input">
-                    <label class="label" for="input-name">Имя</label>
-                </div>
-                <div class="input-block">
-                    <input placeholder=" " id="input-email"type="email" class="contacts-form__input">
-                    <label class="label" for="input-email">Почта</label>
-                </div>
-                <div id="textarea" class="textarea-block textarea">
-                    <textarea placeholder=" " id="input-text" name="text" class="contacts-form__textarea"></textarea>
-                    <label class="label" for="input-text">Сообщение</label>
-                </div>
-                <button class="contacts-form__button button">Отправить</button>
-            </form>
+            <div class="contacts-wrapper">
+                <form action="" class="contacts-form">
+                    <div class="contacts-header">
+                        <span class="contacts-header__subtitle subtitle">Контакты</span>
+                        <contacts-header__title class="title">Хотите так же?</contacts-header__title>
+                    </div>
+                    <div class="input-block">
+                        <input placeholder=" " id="input-name" type="name" class="contacts-form__input">
+                        <label class="label" for="input-name">Имя</label>
+                    </div>
+                    <div class="input-block">
+                        <input placeholder=" " id="input-email"type="email" class="contacts-form__input">
+                        <label class="label" for="input-email">Почта</label>
+                    </div>
+                    <div id="textarea" class="textarea-block textarea">
+                        <textarea placeholder=" " id="input-text" name="text" class="contacts-form__textarea"></textarea>
+                        <label class="label" for="input-text">Сообщение</label>
+                    </div>
+                    <button class="contacts-form__button button">Отправить</button>
+                </form>
+                <ul class="contacts-info">
+                    <li class="contacts-info__item"><a href="https://t.me/andrianovvideo" class="contacts-info__link">Telegram</a></li>
+                    <li class="contacts-info__item"><a href="https://wa.me/89264666284" class="contacts-info__link">WhatsApp</a></li>
+                    <li class="contacts-info__item"><a href="https://vk.com/djandersun" class="contacts-info__link">VK</a></li>
+                    <li class="contacts-info__item"><a href="https://www.youtube.com/c/%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9%D0%90%D0%BD%D0%B4%D1%80%D0%B8%D0%B0%D0%BD%D0%BE%D0%B2%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE" class="contacts-info__link">YouTube</a></li>
+                </ul>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <h1 class="footer__logo">Sergey/Andrianov.</h1>
+                <div class="footer-text">
+                    <a href="#" class="footer-header">example@gmail.com</a>
+                    <div class="footer-info">
+                        <a href="https://t.me/andrianovvideo" class="footer-info__link">Telegram</a>
+                        <a href="https://wa.me/89264666284" class="footer-info__link">WhatsApp</a>
+                        <a href="https://vk.com/djandersun" class="footer-info__link">VK</a>
+                        <a href="https://www.youtube.com/c/%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B9%D0%90%D0%BD%D0%B4%D1%80%D0%B8%D0%B0%D0%BD%D0%BE%D0%B2%D0%B2%D0%B8%D0%B4%D0%B5%D0%BE" class="footer-info__link">YouTube</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
