-add "new modals" -fix"font on Montserrat"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins&display=swap" rel="stylesheet">
     <link
     rel="stylesheet"
@@ -36,13 +37,67 @@
             <a href="#" class="modal__close">x</a>
             <div class="modal-content">
                 <div class="modal-content__photo">
-                    <img src="img/slide-item-2.jpg" alt="Photo" class="modal-content__photo--img">
+                    <img src="img/slide-item.jpg" alt="Photo" class="modal-content__photo--img">
                 </div>
-                <h3 class="modal-content__title">Рекламный ролик</h3>
-                <p class="modal-content__text">С помощью рекламного  формируют яркий запоминающийся образ своего продукта или услуги в глазах потребителя, подробно освещают его положительные качества, подчеркивают его преимущества над аналогичными предложениями конкурентов, расширяют пул лояльных клиентов и, конечно, увеличивают продажи своего продукта или услуги.</p>
+                <h3 class="modal-content__title">Музыкальный видео клип</h3>
+                <p class="modal-content__text">В музыкальном мире мощное продвижение так же важно, как и создание песен. 
+                    Одним из самых действенных и полезных маркетинговых инструментов, который есть у исполнителей, является музыкальное видео.
+                     Ваша целевая аудитория — меломаны и просто любители музыки. 
+                    А они в своем большинстве любят такие ресурсы, как YouTube, Vimeo и Vevo. 
+                    это видео-площадки. Для размещения контента. И чем больше вы демонстрирутете и продвигаете свою музыку на подобных каналах, вы получаете приток новых слушателей и зрителей.А значит спрос.
+                    Например, во всем мире на видео приходится 52 % потребления музыки по этому запросу. 
+                    Это больше, чем все платные и бесплатные сугубо музыкальные стриминговые площадки. 
+                    А еще 93 % самых популярных видео на YouTube — это, не поверите, именно музыкальные клипы.
+                    </p>
             </div>
         </div>
     </div>
+
+    <div class="modal" id="three">
+        <div class="modal__overlay"></div>
+        <div class="modal__dialog">
+            <a href="#" class="modal__close">x</a>
+            <div class="modal-content">
+                <div class="modal-content__photo">
+                    <img src="img/slide-item-5.jpg" alt="Photo" class="modal-content__photo--img">
+                </div>
+                <h3 class="modal-content__title">Love-story</h3>
+                <p class="modal-content__text">Love-story — это Ваша история любви. Обычно съёмку организуют до свадьбы, чтобы потом порадовать гостей на свадьбе, но ведь для любви повод абсолютно не важен, поэтому каждый день вместе является Вашей историей любви, который можно запечатлеть на видео.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="four">
+        <div class="modal__overlay"></div>
+        <div class="modal__dialog">
+            <a href="#" class="modal__close">x</a>
+            <div class="modal-content">
+                <div class="modal-content__photo">
+                    <img src="img/slide-item-4.jpg" alt="Photo" class="modal-content__photo--img">
+                </div>
+                <h3 class="modal-content__title">Kорпоративное видео</h3>
+                <p class="modal-content__text">Kорпоративное видео – это общая категория видеопродукции, включающая в себя корпоративные и презентационные фильмы, ролики о компании и съемки с различных деловых мероприятий (презентации, выставки, встречи с партнерами и др.). 
+                    Десятки компаний ежедневно устраивают мероприятия, открывают новые магазины и филиалы, участвуют в выставках и проводят рекламные кампании.
+                     Для освещения всех этих событий предлагаю сделать корпоративное видео либо для нужд компании, либо для демонстрации более широкой аудитории. </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="five">
+        <div class="modal__overlay"></div>
+        <div class="modal__dialog">
+            <a href="#" class="modal__close">x</a>
+            <div class="modal-content">
+                <div class="modal-content__photo">
+                    <img src="img/slide-item-2.jpg" alt="Photo" class="modal-content__photo--img">
+                </div>
+                <h3 class="modal-content__title">Same Day Edit (SDE)</h3>
+                <p class="modal-content__text">Это свадебный клип продолжительностью до 5 минут с небольшим повествованием о дне свадьбы. В этот клип входят только самые важные и яркие события, произошедшие в этот день, буря эмоций молодоженов, родителей и гостей.
+                    Вся прелесть свадебного клипа в том, что он будет показан всем присутствующим именно в день свадьбы, во время завершения праздника. Никто из гостей об этом даже не догадывается, поэтому демонстрация свадебного видео окажется для них полной неожиданностью, вызовет удивление и восторг.</p>
+            </div>
+        </div>
+    </div>
+
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -89,22 +144,22 @@
             <div class="prices-slider" style="min-width: 0">
 
                 <div class="slide">
-                    <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
+                    <div class="slide__img"><img src="img/slide-item-4.jpg" alt="Photo"></div>
                     <div class="slide-text">
-                        <h4 class="slide-text__title">Музыкальный видео клип</h4>
+                        <h4 class="slide-text__title">Kорпоративное видео</h4>
                         <hr class="slide-text__line">
-                        <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
-                        <button class="button slide-text__button">Подробнее</button>
+                        <p class="slide-text__subtitle">Общая категория видеопродукции, включающая в себя корпоративные и презентационные фильмы, ролики о компании и съемки с различных деловых мероприятий (презентации, выставки, встречи с партнерами и др.).</p>
+                        <button data-toggle="modal" data-href="#four" class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
 
                 <div class="slide">
-                    <div class="slide__img"><img src="img/slide-item-2.jpg" alt=""></div>
+                    <div class="slide__img"><img src="img/slide-item-5.jpg" alt=""></div>
                     <div class="slide-text">
                         <h4 class="slide-text__title">Love-story</h4>
                         <hr class="slide-text__line">
                         <p class="slide-text__subtitle">Это Ваша история любви.</p>
-                        <button class="button slide-text__button">Подробнее</button>
+                        <button data-toggle="modal" data-href="#three" class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
 
@@ -129,12 +184,12 @@
                 </div>
 
                 <div class="slide">
-                    <div class="slide__img"><img src="img/slide-item.jpg" alt=""></div>
+                    <div class="slide__img"><img src="img/slide-item-2.jpg" alt=""></div>
                     <div class="slide-text">
-                        <h4 class="slide-text__title">Музыкальный видео клип</h4>
+                        <h4 class="slide-text__title">Same Day Edit (SDE)</h4>
                         <hr class="slide-text__line">
-                        <p class="slide-text__subtitle">В музыкальном мире мощное продвижение так же важно, как и создание песен.</p>
-                        <button class="button slide-text__button">Подробнее</button>
+                        <p class="slide-text__subtitle">Это свадебный клип продолжительностью до 5 минут с небольшим повествованием о дне свадьбы.</p>
+                        <button data-toggle="modal" data-href="#five" class="button slide-text__button">Подробнее</button>
                     </div>
                 </div>
 
