--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <li class="header-nav__item"><a href="#about" class="header-nav__link">Обо мне</a></li>
                     <li class="header-nav__item"><a href="#portfolio" class="header-nav__link">Портфолио</a></li>
                     <li class="header-nav__item"><a href="#prices" class="header-nav__link">Цены</a></li>
-                    <li class="header-nav__item"><a href="#" class="header-nav__link">Контакты</a></li>
+                    <li class="header-nav__item"><a href="#contacts" class="header-nav__link">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -214,7 +214,7 @@
             </div>
         </div>
     </section>
-    <section class="contacts">
+    <section id="contacts" class="contacts">
         <div class="container">
             <div class="contacts-wrapper">
                 <form action="" class="contacts-form">
