--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header__logo">Sergey/Andrianov.</h1>
+                <div class="header__burger">
+                    <span></span>
+                </div>
                 <ul class="header-nav">
                     <li class="header-nav__item"><a href="#about" class="header-nav__link">Обо мне</a></li>
                     <li class="header-nav__item"><a href="#portfolio" class="header-nav__link">Портфолио</a></li>
