-fix "iframe + slider"

--- a/index.html
+++ b/index.html
@@ -129,12 +129,24 @@
                 <h2 class="title portfolio-header__title">Портфолио</h2>
             </div>
             <div class="portfolio-wrapper">
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="portfolio-item"><iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/yXyBD7EIuMY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/9pDrV_OnMsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/0klDwzy9f0w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/YRM7dZJtUKQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/jTOKJ7ZEJWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
+                <div class="portfolio-item" data-iframe='<iframe class="portfolio-item__iframe" src="https://www.youtube.com/embed/nJ3jR-v7Ou8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'>
+                    <img class="portfolio-item__play" src="img/play.png" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -144,7 +156,7 @@
                 <span class="subtitle prices-header__subtitle">Достижения</span>
                 <h2 class="prices-header__title title">Мои услуги</h2>
             </div>
-            <div class="prices-slider" style="min-width: 0">
+            <div class="prices-slider">
 
                 <div class="slide">
                     <div class="slide__img"><img src="img/slide-item-4.jpg" alt="Photo"></div>
